<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EventFull.ly</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">example@gmail.com</string>
    <string name="prompt_password">******</string>
    <string name="action_sign_in">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_manage_friends">ManageFriends</string>
    <string name="title_activity_ongoing_event">OngoingEvent</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_event_first_page">CreateEventFirstPage</string>
    <string name="title_activity_create_event_second_page">CreateEventSecondPage</string>
    <string name="title_activity_cover_screen">CoverScreen</string>
    <string name="title_activity_view_events">ViewEvents</string>

</resources>
