<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zhao.karani.meetme.LoginActivity">

    <ScrollView
        android:id="@+id/login_form1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView android:id="@+id/appTitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_name"
                android:textSize="40sp"
                android:typeface="sans"
                android:textColor="#000080"
                android:shadowColor="#000000"
                android:shadowRadius="6"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/fromSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="You have signed up. Please log in."
                android:textSize="18sp"
                android:textColor="#880000"
                android:layout_weight="1"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/userNotExist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Incorrect login, or signUp for an account"
                android:textSize="18sp"
                android:textColor="#880000"
                android:layout_weight="1"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/email_login_form1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:orientation="vertical">

                <AutoCompleteTextView
                    android:id="@+id/email1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"/>

                <EditText
                    android:id="@+id/password1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"/>

                <Button
                    android:id="@+id/email_sign_in_button1"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold"
                    android:onClick="logIn"/>

                <!--<TextView android:id="@+id/text_or1"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginTop="16dp"-->
                    <!--android:layout_gravity="center_horizontal"-->
                    <!--android:text="Or"-->
                    <!--android:textStyle="bold"/>-->

                <!--<Button-->
                    <!--android:id="@+id/sign_up1"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:layout_marginTop="24dp"-->
                    <!--android:text="@string/sign_up"-->
                    <!--android:textStyle="bold"-->
                    <!--android:onClick="signUp"/>-->

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
